# sdl-cmake-example

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/: submodule-init.cmake  utils.cmake
src/: main.cpp
